AC_INIT(src/compiler.nc)

AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_C_BIGENDIAN

if test $prefix = NONE
then
    myprefix=/usr/local
else
    myprefix=$prefix
fi

##############################################################
# configure arguments
##############################################################
DEBUGGING=0
LOGGING=0

AC_ARG_WITH(debug,              [  --with-debug              include debug info ], [ DEBUGGING=1; ], [])
AC_ARG_WITH(optimize,           [  --with-optimize           with optimize(-O in CFLAGS) ], [ ENABLE_OPTIMIZE=1 ], [ ENABLE_OPTIMIZE=0 ])
AC_ARG_WITH(memleak-debug,           [  --with-memleak-debug      with memleak debug ], [ ENABLE_MLDEBUG=1 ], [ ENABLE_MLDEBUG=0 ])

##############################################################
# check cpu type
##############################################################
AC_MSG_CHECKING(CPU type)

if test `uname -m` = x86_64
then
    echo x86_64

    AC_DEFINE(__64BIT_CPU__, 1)
elif test `uname -m` = i386 || test `uname -m` = i686
then
    echo x86_32

    AC_DEFINE(__32BIT_CPU__, 1)
elif test `uname -p` = sparc
then
    echo sparc

    AC_DEFINE(__32BIT_CPU__, 1)
    AC_DEFINE(__BIG_ENDIAN__, 1)
elif test `uname -m` = sparc64
then
    echo sparc64

    AC_DEFINE(__64BIT_CPU__, 1)
    AC_DEFINE(__BIG_ENDIAN__, 1)
elif test `uname -m` = ppc
then
    echo ppc

    AC_DEFINE(__32BIT_CPU__, 1)
    AC_DEFINE(__BIG_ENDIAN__, 1)
elif test `uname -m` = ppc64
then
    echo ppc64

    AC_DEFINE(__64BIT_CPU__, 1)
    AC_DEFINE(__BIG_ENDIAN__, 1)
elif test `uname -m` = armv6l
then
    echo armv6l

    AC_DEFINE(__32BIT_CPU__, 1)
elif test `uname -m` = armv7l
then
    echo armv7l

    AC_DEFINE(__32BIT_CPU__, 1)
else
    echo other

    AC_DEFINE(__64BIT_CPU__, 1)
fi

##############################################################
# check operating systems
##############################################################
AC_MSG_CHECKING(Operating System)

CFLAGS='-DPREFIX="\"${DESTDIR}/\""'
CFLAGS="-fPIC -rdynamic $CFLAGS"

AR_LIB=

if test `uname -s` = "Darwin"; then
    echo "Darwin"

    OS=DARWIN

    AC_DEFINE(__DARWIN__, 1)

    if test $myprefix = /usr/local; then
        CFLAGS="-Isrc/ -I. -L . $CFLAGS"
    else 
        CFLAGS="-Isrc/ -I. -L . -I$myprefix/include -L$myprefix/lib $CFLAGS"
    fi
elif test `uname -s` = "FreeBSD"; then
    echo "FreeBSD"

    OS=FREEBSD

    AC_DEFINE(__FREEBSD__, 1)

    CFLAGS="-Isrc/ -I. -L . -I$myprefix/include -L$myprefix/lib $CFLAGS"
elif uname -s | grep -q CYGWIN_NT; then
    echo CYGWIN

    OS=CYGWIN

    AC_DEFINE(__CYGWIN__, 1)

    if test $myprefix = /usr/local; then
        CFLAGS="-Isrc/ -I. -L . $CFLAGS"
    else 
        CFLAGS="-Isrc/ -I. -L . -I$myprefix/include -L$myprefix/lib $CFLAGS"
    fi
else
    echo "Linux"

    OS=LINUX

    AC_DEFINE(__LINUX__, 1)

    if test $myprefix = /usr/local; then
        CFLAGS="-Isrc/ -I. -L . $CFLAGS"
    else
        CFLAGS="-Isrc/ -I. -L . -I$myprefix/include -L$myprefix/lib $CFLAGS"
    fi

    AC_HAVE_LIBRARY(util, [ LIBS="$LIBS -lutil" ], [])
fi

##############################################################
# CFLAGS settings
##############################################################
if test -d /usr/local/include
then
    CFLAGS="$CFLAGS -I/usr/local/include"
fi

if test -d /usr/lib
then
    CFLAGS="$CFLAGS -L/usr/lib"
fi

if test -d /usr/local/lib
then
    CFLAGS="$CFLAGS -L/usr/local/lib"
fi

if test -d /usr/include/i386-linux-gnu/
then
    CFLAGS="$CFLAGS -I/usr/include/i386-linux-gnu//"
fi

if test -d /usr/lib/i386-linux-gnu/
then
    CFLAGS="$CFLAGS -L/usr/lib/i386-linux-gnu/"
fi

if test `uname -s` = "Darwin"; then
    CFLAGS="-L/opt/local/lib $CFLAGS"
fi

if test $ENABLE_OPTIMIZE = 1
then
    if test $ENABLE_THREAD = 1
    then
        echo "Enable thread with optimization is not supported"
        exit 1;
    else
        CFLAGS="$CFLAGS -O2"
    fi
fi

if test $DEBUGGING = 1
then
    CFLAGS="$CFLAGS -g -DMDEBUG"
    #CFLAGS="$CFLAGS -g -DMDEBUG -Werror"
fi

if test $ENABLE_MLDEBUG = 1
then
    NCFLAGS="-gm"
fi

AC_SUBST(OS)

export CFLAGS

##########################################################
# Libs
##########################################################
CC=gcc

INSTALL="$(which install) -c"

if test `uname -s` = "Darwin"; then
    AC_CHECK_HEADER(ncurses.h, [AC_DEFINE(HAVE_NCURSESW_H, 1)], [])
    AC_HAVE_LIBRARY(ncursesw, [ LIBS="$LIBS -lncurses"; ], [])
else
    AC_CHECK_HEADER(ncurses.h, [AC_DEFINE(HAVE_NCURSESW_H, 1)], [])
    AC_HAVE_LIBRARY(ncursesw, [ LIBS="$LIBS -lncursesw"; ], [])
fi

AC_CHECK_HEADER(readline/readline.h, [AC_DEFINE(HAVE_READLINE_H, 1)], [])
AC_HAVE_LIBRARY(readline, [ LIBS="$LIBS -lreadline"; ], [])

AC_CHECK_HEADER(bsd/stdlib.h, [AC_DEFINE(HAVE_BSD_H, 1)], [])
AC_HAVE_LIBRARY(bsd, [ LIBS="$LIBS -lbsd"; ], [])

if test "$OS" != FREEBSD
then
    AC_HAVE_LIBRARY(dl, [ LIBS="$LIBS -ldl"; ], [exit])
fi

AC_CHECK_HEADER(math.h, [AC_DEFINE(HAVE_MATH_H,1)], [])
AC_HAVE_LIBRARY(m, [ LIBS="$LIBS -lm"; ], [])
AC_CHECK_HEADER(iconv.h, [AC_DEFINE(HAVE_ICONV_H, 1)], [])

AC_CHECK_HEADER(pthread.h, [AC_DEFINE(HAVE_PTHREAD_H, 1)], [ exit ])
AC_HAVE_LIBRARY(pthread, [ LIBS="$LIBS -lpthread"; ], [ exit ])
AC_SUBST(ENABLE_THREAD)

AC_CHECK_HEADER(pcre.h, [AC_DEFINE(HAVE_PCRE_H,1)], [])
AC_HAVE_LIBRARY(pcre, [ LIBS="$LIBS -lpcre"; ], [ eixt ])

AC_CHECK_HEADER(readline/readline.h, [AC_DEFINE(HAVE_READLINE_H, 1)], [])
AC_HAVE_LIBRARY(readline, [ LIBS="$LIBS -lreadline"; ], [])

AC_HAVE_LIBRARY(rt, [ LIBS="$LIBS -lrt"; ], [])

OBJS="src/vm.o"
#OBJS="src/vm.o src/objects.o src/klass.o src/heap.o src/type.o"
COMPILER_OBJS="src/parser.o src/node.o"
#COMPILER_OBJS="src/parser.o src/node_type.o src/node.o src/vtable.o"

AC_SUBST(LIBS)

CC=neo-c

AC_SUBST(CC)

DESTDIR=$myprefix

AC_SUBST(DESTDIR)

CFLAGS="$CFLAGS -Qunused-arguments"
AC_SUBST(CFLAGS)
AC_SUBST(NCFLAGS)

AC_CHECK_FUNCS(execvpe)

AC_SUBST(COMPILER_OBJS)
AC_SUBST(OBJS)

AC_OUTPUT(Makefile)
